--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <li>Hobbies: Jogar Games</li>
         <li>Interesses: Programação</li>
         <li>Disciplinas favoritas: Matemática, Física, Computação</li>
+        <li><a href="ivan.html">Ivan</a></li>
+        <li><a href="donda.html">Donda</a></li>
+        <li><a href="lala.html">David</a></li>
     </ul>
     <a href="https://flowgames.gg/">Meu site favorito</a>
     <img src="https://pt.vecteezy.com/fotos-gratis/imagem" alt="Imagem favorita">
